--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -20,6 +20,9 @@ jobs:
           rm -rf control-plane
       - name: Setup Go
         uses: actions/setup-go@v5
+        with:
+          go-version: "^1.23.0"
+          check-latest: true
       - name: Build
         run: make build
       - name: Run GoReleaser
