--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -15,13 +15,16 @@ jobs:
       - uses: actions/checkout@v4
       - name: Copy definition
         run: |
-          git clone https://.:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository_owner }}/control-plane
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global url."https://${{ secrets.GITHUB_TOKEN }}@github.com/".insteadOf "https://github.com/"
+          git clone https://github.com/${{ github.repository_owner }}/control-plane
           cp control-plane/api/api/definitions/controlplane.yml ./definition.yml
           rm -rf control-plane
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
-          go-version: "^1.23.0"
+          go-version: "1.23.x"
           check-latest: true
       - name: Build
         run: make build
