--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -7,6 +7,7 @@
 # vim: set ts=2 sw=2 tw=0 fo=cnqoj
 
 version: 2
+project_name: beamlit
 
 before:
   hooks:
@@ -16,7 +17,8 @@ before:
     - go generate ./...
 
 builds:
-  - env:
+  - main: ./cli/main.go
+    env:
       - CGO_ENABLED=0
     goos:
       - linux
