--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -17,7 +17,7 @@ before:
     - go generate ./...
 
 builds:
-  - main: ./cli/main.go
+  - main: ./main.go
     env:
       - CGO_ENABLED=0
     goos:
