--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -18,9 +18,9 @@ jobs:
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git config --global url."https://.:${{ secrets.GH_PAT }}@github.com/".insteadOf "https://github.com/"
-          git clone https://github.com/${{ github.repository_owner }}/control-plane
-          cp control-plane/api/api/definitions/controlplane.yml ./definition.yml
-          rm -rf control-plane
+          git clone https://github.com/${{ github.repository_owner }}/controlplane
+          cp controlplane/api/api/definitions/controlplane.yml ./definition.yml
+          rm -rf controlplane
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
