--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -6,6 +6,7 @@ on:
       - "*"
     branches:
       - "main"
+
 jobs:
   pypi-publish:
     name: Upload to PyPI
@@ -24,6 +25,7 @@ jobs:
           echo "Setting version to ${{ github.ref_name }}"
           sed -i -E 's/^version = .*/version = "${{ github.ref_name }}"/' sdk-python/pyproject.toml
       - name: Set version
+        if: startsWith(github.ref, 'refs/tags') != true
         run: |
           echo ${{ github.ref }}
           echo "Setting version to ${{ github.ref_name }}"
