--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -31,7 +31,7 @@ jobs:
           echo "Setting version to ${{ github.ref_name }}"
           VERSION=$(git describe --tags --abbrev=0)
           echo "Current version: $VERSION"
-          sed -i -E 's/^version = .*/version = \""$VERSION".dev-${{ github.run_number }}\"/' sdk-python/pyproject.toml
+          sed -i -E "s/^version = .*/version = \"${VERSION}.pre-${{ github.run_number }}\"/" sdk-python/pyproject.toml
       - name: Publish to PyPi
         run: |
           uv build sdk-python
