--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -17,6 +17,8 @@ jobs:
       id-token: write
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-tags: true
       - name: "Install uv"
         uses: astral-sh/setup-uv@v4
       - name: Set version
