--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -19,6 +19,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-tags: true
+          fetch-depth: 0
       - name: "Install uv"
         uses: astral-sh/setup-uv@v4
       - name: Set version
