--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -25,14 +25,17 @@ jobs:
       - name: Set version
         if: startsWith(github.ref, 'refs/tags')
         run: |
-          echo "Setting version to ${{ github.ref_name }}"
-          sed -i -E 's/^version = .*/version = "${{ github.ref_name }}"/' sdk-python/pyproject.toml
+          VERSION="${{ github.ref_name }}"
+          VERSION="${VERSION#v}"
+          echo "Setting version to $VERSION"
+          sed -i -E 's/^version = .*/version = "${VERSION}"/' sdk-python/pyproject.toml
       - name: Set version
         if: startsWith(github.ref, 'refs/tags') != true
         run: |
           echo ${{ github.ref }}
           echo "Setting version to ${{ github.ref_name }}"
           VERSION=$(git describe --tags --abbrev=0)
+          VERSION="${VERSION#v}"
           echo "Current version: $VERSION"
           sed -i -E "s/^version = .*/version = \"${VERSION}.pre-${{ github.run_number }}\"/" sdk-python/pyproject.toml
       - name: Publish to PyPi
