--- a/.github/workflows/python-dev.yaml
+++ b/.github/workflows/python-dev.yaml
@@ -1,11 +1,10 @@
-name: Python SDK
+name: Python SDK dev
 
 on:
   push:
-    tags:
-      - "*"
-    branches:
-      - "main"
+    branches: ["main"]
+    paths:
+      - "sdk-python/**"
 
 jobs:
   pypi-publish:
@@ -23,17 +22,7 @@ jobs:
       - name: "Install uv"
         uses: astral-sh/setup-uv@v4
       - name: Set version
-        if: startsWith(github.ref, 'refs/tags')
         run: |
-          VERSION="${{ github.ref_name }}"
-          VERSION="${VERSION#v}"
-          echo "Setting version to $VERSION"
-          sed -i -E "s/^version = .*/version = \"${VERSION}\"/" sdk-python/pyproject.toml
-      - name: Set version
-        if: startsWith(github.ref, 'refs/tags') != true
-        run: |
-          echo ${{ github.ref }}
-          echo "Setting version to ${{ github.ref_name }}"
           VERSION=$(git describe --tags --abbrev=0)
           VERSION="${VERSION#v}"
           # Split version into parts and increment minor version
