--- a/sdk-python/pyproject.toml
+++ b/sdk-python/pyproject.toml
@@ -11,7 +11,10 @@ dependencies = [
     "httpx>=0.20.0,<0.28.0",
     "attrs>=21.3.0",
     "python-dateutil>=2.8.0",
-    "pyyaml==6.0.2",
+    "pyyaml>=6.0.2,<6.1.0",
+    "pydantic-settings>=2.6.1,<2.7.0",
+    "pydantic>=2.10.3,<2.11.0",
+    "requests>=2.32.3,<2.33.0",
 ]
 
 [build-system]
