--- a/sdk-python/beamlit.yaml
+++ b/sdk-python/beamlit.yaml
@@ -1,3 +1,5 @@
-workspace: development
-type: agent
-name: agent-gpt-4o-mini
+agent:
+  functions_directory: src/integrationtest/functions
+server:
+  module: integrationtest.agent.main
+  port: 1338
