--- a/sdk-python/pyproject.toml
+++ b/sdk-python/pyproject.toml
@@ -19,10 +19,12 @@ dependencies = [
     "pydantic-settings>=2.6.1,<2.7.0",
     "pydantic>=2.10.3,<2.11.0",
     "requests>=2.32.3,<2.33.0",
-    "langchain-core==0.3.13",
-    "langgraph==0.2.40",
-    "fastapi[standard]==0.115.4",
-    "asgi-correlation-id==4.3.4",
+    "langchain-core>=0.3.13,<0.4.0",
+    "langchain-community>=0.3.3,<0.4.0",
+    "langchain-openai>=0.2.4,<0.3.0",
+    "langgraph>=0.2.40,<0.3.0",
+    "fastapi[standard]>=0.115.4,<0.116.0",
+    "asgi-correlation-id>=4.3.4,<5.0.0",
 ]
 [dependency-groups]
 dev = [
@@ -34,7 +36,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.ruff]
-line-length = 120
+line-length = 100
 
 [tool.ruff.lint]
 select = ["F", "I", "UP"]
