--- a/sdk-python/pyproject.toml
+++ b/sdk-python/pyproject.toml
@@ -25,6 +25,7 @@ dependencies = [
     "langgraph>=0.2.40,<0.3.0",
     "fastapi[standard]>=0.115.4,<0.116.0",
     "asgi-correlation-id>=4.3.4,<5.0.0",
+    "mcp>=1.1.2",
 ]
 [dependency-groups]
 dev = [
