--- a/sdk-python/pyproject.toml
+++ b/sdk-python/pyproject.toml
@@ -26,6 +26,13 @@ dependencies = [
     "fastapi[standard]>=0.115.4,<0.116.0",
     "asgi-correlation-id>=4.3.4,<5.0.0",
     "mcp>=1.1.2",
+    "traceloop-sdk>=0.33.12",
+    "opentelemetry-sdk>=1.28.2",
+    "opentelemetry-exporter-otlp>=1.28.2",
+    "opentelemetry-api>=1.28.2",
+    "opentelemetry-instrumentation-fastapi>=0.49b2",
+    "opentelemetry-instrumentation-httpx>=0.49b2",
+    "opentelemetry-instrumentation-logging>=0.49b2"
 ]
 [dependency-groups]
 dev = [
