--- a/vscode/package.json
+++ b/vscode/package.json
@@ -24,20 +24,16 @@
     "views": {
       "beamlit-explorer": [
         {
-          "id": "beamlitClusters",
-          "name": "Clusters"
+          "id": "beamlit",
+          "name": "Beamlit"
         }
       ]
     },
     "commands": [
       {
-        "command": "beamlit.refreshClusters",
-        "title": "Refresh",
+        "command": "beamlit.refresh",
+        "title": "Beamlit: Refresh",
         "icon": "$(refresh)"
-      },
-      {
-        "command": "beamlit.selectCluster",
-        "title": "Select Cluster"
       }
     ]
   },
@@ -56,16 +52,22 @@
     "test": "vscode-test"
   },
   "devDependencies": {
-    "@types/vscode": "^1.96.0",
+    "@tsconfig/node20": "^20.1.4",
+    "@types/js-yaml": "^4.0.9",
     "@types/mocha": "^10.0.10",
     "@types/node": "20.x",
+    "@types/vscode": "^1.96.0",
     "@typescript-eslint/eslint-plugin": "^8.17.0",
     "@typescript-eslint/parser": "^8.17.0",
-    "eslint": "^9.16.0",
-    "esbuild": "^0.24.0",
-    "npm-run-all": "^4.1.5",
-    "typescript": "^5.7.2",
     "@vscode/test-cli": "^0.0.10",
-    "@vscode/test-electron": "^2.4.1"
+    "@vscode/test-electron": "^2.4.1",
+    "esbuild": "^0.24.0",
+    "eslint": "^9.16.0",
+    "npm-run-all": "^4.1.5",
+    "typescript": "^5.7.2"
+  },
+  "dependencies": {
+    "@beamlit/sdk": "^0.0.4",
+    "js-yaml": "^4.1.0"
   }
 }
