--- a/.github/workflows/vscode-dev.yml
+++ b/.github/workflows/vscode-dev.yml
@@ -4,9 +4,8 @@ on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
+    paths:
+      - "vscode/**"
 
 jobs:
   build:
@@ -21,9 +20,15 @@ jobs:
     strategy:
       matrix:
         os: [macos-latest, ubuntu-latest, windows-latest]
+    defaults:
+      run:
+        working-directory: ./vscode
     steps:
     - name: Checkout
       uses: actions/checkout@v4
+      with:
+        fetch-tags: true
+        fetch-depth: 0
     - name: Use node.js
       uses: actions/setup-node@v4
       with:
