Add environment for functions / models / agents

--- a/vscode/package.json
+++ b/vscode/package.json
@@ -1,8 +1,8 @@
 {
   "name": "vscode-beamlit-tools",
-  "displayName": "Beamlit",
+  "displayName": "Beamlit Explorer",
   "description": "Ship AI agents that just work.",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "icon": "resources/beamlit.png",
   "publisher": "beamlit",
   "engines": {
