--- a/sdk-python/pyproject.toml
+++ b/sdk-python/pyproject.toml
@@ -32,6 +32,7 @@ dependencies = [
     "opentelemetry-api>=1.28.2",
     "opentelemetry-instrumentation-fastapi>=0.49b2",
     "opentelemetry-instrumentation-httpx>=0.49b2",
+    "opentelemetry-instrumentation-system-metrics>=0.50b0",
 ]
 [dependency-groups]
 dev = [
