--- a/.github/workflows/ts-dev.yaml
+++ b/.github/workflows/ts-dev.yaml
@@ -1,32 +1,32 @@
-name: Python SDK dev
+name: TS SDK dev
 
 on:
   push:
     branches: ["main"]
     paths:
       - "sdk-ts/**"
-
 jobs:
   npm-publish:
     name: Upload to NPM
     runs-on: ubuntu-latest
     environment: release
-    permissions:
-      # For PyPI's trusted publishing.
-      id-token: write
     steps:
       - uses: actions/checkout@v4
-        name: Install pnpm
+        name: Checkout
         with:
           fetch-tags: true
           fetch-depth: 0
-      - uses: pnpm/action-setup@v4
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10
       - name: Install Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'pnpm'
+          registry-url: 'https://registry.npmjs.org'
       - name: Set version
+        working-directory: sdk-ts
         run: |
           VERSION=$(git describe --tags --abbrev=0)
           VERSION="${VERSION#v}"
@@ -37,5 +37,9 @@ jobs:
           echo "Current version: $VERSION"
           pnpm version $VERSION-alpha.${{ github.run_number }}
       - name: Publish to NPM
+        working-directory: sdk-ts
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
           pnpm publish --access public --no-git-checks
