--- a/sdk-ts/package.json
+++ b/sdk-ts/package.json
@@ -6,7 +6,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "start": "tsc index.ts && node index.js",
+    "start": "tsc --lib es2022 --module es2022 --target es2022 index.ts && node index.js",
     "poststart": "rm -f src/**/*.js src/*.js *.js",
     "test": "jest"
   },
@@ -29,7 +29,27 @@
   },
   "dependencies": {
     "@hey-api/client-fetch": "^0.5.7",
+    "@langchain/community": "^0.3.26",
+    "@langchain/core": "^0.3.33",
+    "@langchain/openai": "^0.3.17",
+    "@opentelemetry/exporter-logs-otlp-grpc": "^0.57.1",
+    "@opentelemetry/exporter-metrics-otlp-grpc": "^0.57.1",
+    "@opentelemetry/exporter-trace-otlp-grpc": "^0.57.1",
+    "@opentelemetry/instrumentation-fastify": "^0.44.1",
+    "@opentelemetry/instrumentation-http": "^0.57.1",
+    "@opentelemetry/resources": "^1.30.1",
+    "@opentelemetry/sdk-logs": "^0.57.1",
+    "@opentelemetry/sdk-metrics": "^1.30.1",
+    "@opentelemetry/sdk-trace-base": "^1.30.1",
+    "@opentelemetry/sdk-trace-node": "^1.30.1",
+    "@opentelemetry/semantic-conventions": "^1.28.0",
     "axios": "^1.7.9",
-    "js-yaml": "^4.1.0"
+    "fastify": "^5.2.1",
+    "js-yaml": "^4.1.0",
+    "jwt-decode": "^4.0.0",
+    "pino": "^9.6.0",
+    "uuid": "^11.0.5",
+    "yaml": "^2.7.0",
+    "zod": "^3.24.1"
   }
 }
