Add install and build before publishing

--- a/.github/workflows/ts-dev.yaml
+++ b/.github/workflows/ts-dev.yaml
@@ -42,4 +42,6 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
+          pnpm i
+          pnpm build
           pnpm publish --access public --no-git-checks
