--- a/sdk-ts/package.json
+++ b/sdk-ts/package.json
@@ -4,9 +4,12 @@
   "description": "",
   "scripts": {
     "build": "tsc",
+    "dev": "tsc --watch",
     "start": "tsc --lib es2022 --module es2022 --target es2022 index.ts && node index.js",
     "poststart": "rm -f src/**/*.js src/*.js *.js",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "main": "dist/index.js",
   "keywords": [],
@@ -21,7 +24,9 @@
     "moduleNameMapper": {
       "^(\\.{1,2}/.*)\\.js$": "$1"
     },
-    "extensionsToTreatAsEsm": [".ts"],
+    "extensionsToTreatAsEsm": [
+      ".ts"
+    ],
     "transform": {
       "^.+\\.tsx?$": [
         "ts-jest",
@@ -34,14 +39,20 @@
     "testEnvironment": "node"
   },
   "devDependencies": {
+    "@eslint/js": "^9.19.0",
     "@jest/globals": "^29.7.0",
     "@tsconfig/node20": "^20.1.4",
     "@types/jest": "^29.5.14",
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^22.10.5",
+    "@typescript-eslint/eslint-plugin": "^8.21.0",
+    "@typescript-eslint/parser": "^8.21.0",
+    "eslint": "^9.19.0",
+    "eslint-config-prettier": "^10.0.1",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.21.0"
   },
   "dependencies": {
     "@hey-api/client-fetch": "^0.5.7",
