--- a/.github/workflows/ts-release.yaml
+++ b/.github/workflows/ts-release.yaml
@@ -24,7 +24,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          registry-url: 'https://registry.npmjs.org'
+          registry-url: "https://registry.npmjs.org"
       - name: Set version
         working-directory: sdk-ts
         run: |
@@ -38,4 +38,6 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
+          pnpm i
+          pnpm build
           pnpm publish --access public --no-git-checks
