--- a/sdk-python/pyproject.toml
+++ b/sdk-python/pyproject.toml
@@ -54,8 +54,12 @@ dependencies = [
 ]
 [dependency-groups]
 dev = [
+    "pdoc3>=0.11.5",
     "ruff>=0.8.2",
 ]
+
+[project.scripts]
+beamlit-docs = "pdoc.cli:main ['src/beamlit', '-o', 'docs', '--html', '--force', '--skip-errors']"
 
 [build-system]
 requires = ["hatchling"]
