--- a/sdk-python/pyproject.toml
+++ b/sdk-python/pyproject.toml
@@ -51,6 +51,11 @@ dependencies = [
     "opentelemetry-instrumentation-together>=0.35.0",
     "opentelemetry-instrumentation-watsonx>=0.35.0",
     "opentelemetry-instrumentation-weaviate>=0.35.0",
+    "langchain-cohere>=0.4.2",
+    "langchain-xai>=0.2.0",
+    "langchain-anthropic>=0.3.4",
+    "langchain-mistralai>=0.2.5",
+    "langchain-deepseek-official>=0.1.0",
 ]
 [dependency-groups]
 dev = [
