--- a/sdk-ts/package.json
+++ b/sdk-ts/package.json
@@ -56,11 +56,15 @@
   },
   "dependencies": {
     "@hey-api/client-fetch": "^0.5.7",
+    "@langchain/anthropic": "^0.3.12",
+    "@langchain/cohere": "^0.3.2",
     "@langchain/community": "^0.3.26",
     "@langchain/core": "^0.3.33",
     "@langchain/deepseek": "^0.0.1",
     "@langchain/langgraph": "^0.2.41",
+    "@langchain/mistralai": "^0.2.0",
     "@langchain/openai": "^0.3.17",
+    "@langchain/xai": "^0.0.1",
     "@modelcontextprotocol/sdk": "^1.4.1",
     "@opentelemetry/exporter-logs-otlp-grpc": "^0.57.1",
     "@opentelemetry/exporter-metrics-otlp-grpc": "^0.57.1",
@@ -74,6 +78,7 @@
     "@opentelemetry/sdk-trace-node": "^1.30.1",
     "@opentelemetry/semantic-conventions": "^1.28.0",
     "axios": "^1.7.9",
+    "cohere-ai": "^7.15.4",
     "fastify": "^5.2.1",
     "js-yaml": "^4.1.0",
     "jwt-decode": "^4.0.0",
