--- a/sdk-ts/tsconfig.json
+++ b/sdk-ts/tsconfig.json
@@ -1,9 +1,4 @@
 {
-  "extends": "@tsconfig/node20/tsconfig.json",
-  "$schema": "https://json.schemastore.org/tsconfig",
-  "display": "Node 20",
-  "_version": "20.1.0",
-
   "compilerOptions": {
     "lib": ["es2023"],
     "module": "nodenext",
@@ -18,5 +13,6 @@
     "rootDir": "./src",
     "declaration": true
   },
-  "include": ["src/**/*.ts"]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
