--- a/sdk-ts/package.json
+++ b/sdk-ts/package.json
@@ -1,17 +1,14 @@
 {
   "name": "@beamlit/sdk",
   "version": "0.0.34",
-  "description": "",
-  "scripts": {
-    "build": "npm run build:esm && npm run build:cjs",
-    "build:esm": "tsc -p tsconfig.prod.json && echo '{\"type\": \"module\"}' > dist/esm/package.json",
-    "build:cjs": "tsc -p tsconfig.cjs.json && echo '{\"type\": \"commonjs\"}' > dist/cjs/package.json",
-    "prepack": "npm run build:esm && npm run build:cjs",
-    "lint": "eslint src/",
-    "test": "jest",
-    "start": "npm run server",
-    "server": "tsx watch --clear-screen=false src/cli.ts server",
-    "client": "tsx src/cli.ts client"
+  "description": "Beamlit SDK for TypeScript",
+  "license": "MIT",
+  "author": "Beamlit, INC (https://beamlit.com)",
+  "homepage": "https://beamlit.com",
+  "bugs": "https://github.com/beamlit/toolkit/issues",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/beamlit/toolkit/sdk-ts"
   },
   "engines": {
     "node": ">=18"
@@ -21,9 +18,11 @@
     "agent",
     "mcp"
   ],
-  "author": "cploujoux",
-  "license": "Apache-2.0",
   "exports": {
+    ".": {
+      "import": "./dist/esm/index.js",
+      "require": "./dist/cjs/index.js"
+    },
     "./*": {
       "import": "./dist/esm/*",
       "require": "./dist/cjs/*"
@@ -39,46 +38,16 @@
   "files": [
     "dist"
   ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/beamlit/toolkit/sdk-ts"
-  },
-  "jest": {
-    "preset": "ts-jest/presets/default-esm",
-    "moduleNameMapper": {
-      "^(\\.{1,2}/.*)\\.js$": "$1"
-    },
-    "extensionsToTreatAsEsm": [
-      ".ts"
-    ],
-    "transform": {
-      "^.+\\.tsx?$": [
-        "ts-jest",
-        {
-          "useESM": true,
-          "tsconfig": "tsconfig.json"
-        }
-      ]
-    },
-    "testEnvironment": "node"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.19.0",
-    "@jest/globals": "^29.7.0",
-    "@tsconfig/node20": "^20.1.4",
-    "@types/jest": "^29.5.14",
-    "@types/js-yaml": "^4.0.9",
-    "@types/node": "^22.10.5",
-    "@typescript-eslint/eslint-plugin": "^8.21.0",
-    "@typescript-eslint/parser": "^8.21.0",
-    "eslint": "^9.19.0",
-    "eslint-config-prettier": "^10.0.1",
-    "express": "^4.19.2",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.2.5",
-    "tsx": "^4.16.5",
-    "typescript": "^5.7.2",
-    "typescript-eslint": "^8.21.0"
+  "scripts": {
+    "build": "npm run build:esm && npm run build:cjs",
+    "build:esm": "tsc -p tsconfig.prod.json && echo '{\"type\": \"module\"}' > dist/esm/package.json",
+    "build:cjs": "tsc -p tsconfig.cjs.json && echo '{\"type\": \"commonjs\"}' > dist/cjs/package.json",
+    "prepack": "npm run build:esm && npm run build:cjs",
+    "lint": "eslint src/",
+    "test": "jest",
+    "start": "npm run server",
+    "server": "tsx watch --clear-screen=false src/cli.ts server",
+    "client": "tsx src/cli.ts client"
   },
   "dependencies": {
     "@hey-api/client-fetch": "^0.5.7",
@@ -112,5 +81,42 @@
     "uuid": "^11.0.5",
     "yaml": "^2.7.0",
     "zod": "^3.24.1"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.19.0",
+    "@jest/globals": "^29.7.0",
+    "@tsconfig/node20": "^20.1.4",
+    "@types/jest": "^29.5.14",
+    "@types/js-yaml": "^4.0.9",
+    "@types/node": "^22.10.5",
+    "@typescript-eslint/eslint-plugin": "^8.21.0",
+    "@typescript-eslint/parser": "^8.21.0",
+    "eslint": "^9.19.0",
+    "eslint-config-prettier": "^10.0.1",
+    "express": "^4.19.2",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.5",
+    "tsx": "^4.16.5",
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.21.0"
+  },
+  "jest": {
+    "preset": "ts-jest/presets/default-esm",
+    "moduleNameMapper": {
+      "^(\\.{1,2}/.*)\\.js$": "$1"
+    },
+    "extensionsToTreatAsEsm": [
+      ".ts"
+    ],
+    "transform": {
+      "^.+\\.tsx?$": [
+        "ts-jest",
+        {
+          "useESM": true,
+          "tsconfig": "tsconfig.json"
+        }
+      ]
+    },
+    "testEnvironment": "node"
   }
 }
