--- a/sdk-python/src/integrationtest/pyproject.toml
+++ b/sdk-python/src/integrationtest/pyproject.toml
@@ -10,3 +10,8 @@ dependencies = [
 
 [tool.uv.sources]
 beamlit = { path = "../../" }
+
+[dependency-groups]
+dev = [
+    "langchain-openai>=0.3.3",
+]
