--- a/sdk-ts/package.json
+++ b/sdk-ts/package.json
@@ -55,6 +55,8 @@
     "@hey-api/client-fetch": "^0.5.7",
     "@langchain/community": "^0.3.26",
     "@langchain/core": "^0.3.33",
+    "@langchain/langgraph": "^0.2.44",
+    "@langchain/openai": "^0.3.17",
     "@modelcontextprotocol/sdk": "^1.4.1",
     "@opentelemetry/exporter-logs-otlp-grpc": "^0.57.1",
     "@opentelemetry/exporter-metrics-otlp-grpc": "^0.57.1",
