--- a/sdk-ts/package.json
+++ b/sdk-ts/package.json
@@ -58,8 +58,10 @@
     "@langchain/langgraph": "^0.2.44",
     "@langchain/openai": "^0.3.17",
     "@modelcontextprotocol/sdk": "^1.4.1",
+    "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/exporter-logs-otlp-grpc": "^0.57.1",
     "@opentelemetry/exporter-metrics-otlp-grpc": "^0.57.1",
+    "@opentelemetry/exporter-metrics-otlp-http": "^0.57.1",
     "@opentelemetry/exporter-trace-otlp-grpc": "^0.57.1",
     "@opentelemetry/instrumentation-fastify": "^0.44.1",
     "@opentelemetry/instrumentation-http": "^0.57.1",
@@ -75,6 +77,7 @@
     "js-yaml": "^4.1.0",
     "jwt-decode": "^4.0.0",
     "pino": "^9.6.0",
+    "pino-pretty": "^13.0.0",
     "uuid": "^11.0.5",
     "ws": "^8.18.0",
     "yaml": "^2.7.0",
