Plug knowledge base and integration with control plane

--- a/sdk-ts/package.json
+++ b/sdk-ts/package.json
@@ -54,9 +54,9 @@
     "@fastify/cors": "^10.0.2",
     "@fastify/websocket": "^11.0.2",
     "@hey-api/client-fetch": "^0.5.7",
-    "@langchain/community": "^0.3.26",
-    "@langchain/core": "^0.3.33",
-    "@langchain/langgraph": "^0.2.44",
+    "@langchain/community": "^0.3.30",
+    "@langchain/core": "^0.3.39",
+    "@langchain/langgraph": "^0.2.46",
     "@modelcontextprotocol/sdk": "^1.4.1",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/api-logs": "^0.57.1",
@@ -103,6 +103,9 @@
     "@jest/globals": "^29.7.0",
     "@langchain/deepseek": "^0.0.1",
     "@langchain/openai": "^0.3.17",
+    "@pinecone-database/pinecone": "^4.1.0",
+    "@qdrant/js-client-rest": "^1.13.0",
+    "@qdrant/qdrant-js": "^1.13.0",
     "@tsconfig/node20": "^20.1.4",
     "@types/jest": "^29.5.14",
     "@types/js-yaml": "^4.0.9",
@@ -110,6 +113,7 @@
     "@types/ws": "^8.5.14",
     "@typescript-eslint/eslint-plugin": "^8.21.0",
     "@typescript-eslint/parser": "^8.21.0",
+    "chromadb": "^1.10.4",
     "eslint": "^9.19.0",
     "eslint-config-prettier": "^10.0.1",
     "express": "^4.19.2",
@@ -120,7 +124,8 @@
     "typedoc-plugin-markdown": "^4.4.1",
     "typedoc-theme-hierarchy": "^5.0.4",
     "typescript": "^5.7.2",
-    "typescript-eslint": "^8.21.0"
+    "typescript-eslint": "^8.21.0",
+    "weaviate-client": "^3.3.6"
   },
   "jest": {
     "preset": "ts-jest/presets/default-esm",
