--- a/vscode/.vscode/launch.json
+++ b/vscode/.vscode/launch.json
@@ -15,7 +15,10 @@
 			"outFiles": [
 				"${workspaceFolder}/dist/**/*.js"
 			],
-			"preLaunchTask": "${defaultBuildTask}"
+			"preLaunchTask": "${defaultBuildTask}",
+			"env": {
+        "BL_ENV": "dev"
+      }
 		}
 	]
 }
