--- a/vscode/package.json
+++ b/vscode/package.json
@@ -77,6 +77,7 @@
     "@types/mocha": "^10.0.10",
     "@types/node": "20.x",
     "@types/vscode": "^1.90.0",
+    "@types/ws": "^8.5.14",
     "@typescript-eslint/eslint-plugin": "^8.17.0",
     "@typescript-eslint/parser": "^8.17.0",
     "@vscode/test-cli": "^0.0.10",
@@ -87,7 +88,10 @@
     "typescript": "^5.7.2"
   },
   "dependencies": {
-    "@beamlit/sdk": "^0.0.34-alpha.4",
+    "@beamlit/sdk": "^0.0.57-alpha.61",
+    "@pinecone-database/pinecone": "^4.1.0",
+    "@qdrant/js-client-rest": "^1.13.0",
+    "chromadb": "^1.10.4",
     "js-yaml": "^4.1.0"
   }
 }
