--- a/sdk-python/pyproject.toml
+++ b/sdk-python/pyproject.toml
@@ -51,6 +51,7 @@ dependencies = [
     "opentelemetry-instrumentation-weaviate>=0.35.0",
     "mcp>=1.2.1",
     "websockets>=14.1",
+    "websocket>=0.2.1",
 ]
 [dependency-groups]
 dev = [
