--- a/sdk-ts/package.json
+++ b/sdk-ts/package.json
@@ -55,7 +55,7 @@
     "@fastify/websocket": "^11.0.2",
     "@hey-api/client-fetch": "^0.5.7",
     "@langchain/community": "^0.3.30",
-    "@langchain/core": "^0.3.39",
+    "@langchain/core": "^0.3.40",
     "@langchain/langgraph": "^0.2.46",
     "@modelcontextprotocol/sdk": "^1.4.1",
     "@opentelemetry/api": "^1.9.0",
@@ -100,6 +100,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
+    "@google/generative-ai": "^0.21.0",
     "@jest/globals": "^29.7.0",
     "@langchain/deepseek": "^0.0.1",
     "@langchain/openai": "^0.3.17",
