SDK TS - Add optional fs cache for controlplane loading
Signed-off-by: drappier-charles <cdrappier@beamlit.com>

--- a/sdk-ts/package.json
+++ b/sdk-ts/package.json
@@ -40,6 +40,7 @@
   ],
   "scripts": {
     "build": "npm run build:esm && npm run build:cjs",
+    "build:watch": "tsc -p tsconfig.cjs.json --watch",
     "build:esm": "tsc -p tsconfig.prod.json && echo '{\"type\": \"module\"}' > dist/esm/package.json",
     "build:cjs": "tsc -p tsconfig.cjs.json && echo '{\"type\": \"commonjs\"}' > dist/cjs/package.json",
     "prepack": "npm run build:esm && npm run build:cjs",
